# YT-Spammer-Purge

./: .gitignore  YTSpammerPurge.py  new_auth.py  new_vaildation.py  new_validation.py  pyproject.toml
Scripts/: auth.py  models.py  shared_imports.py  validation.py
Scripts/_vendor/: LICENSE  pwinput.py
Scripts/utils/: __init__.py  ask.py  encryption.py  errors.py  models.py  pyinstaller_stuff.py  stringstuff.py  term.py  youtube.py
misc/: benchmark_distance.py  old_benchmark_distance.py  original_utils.py
